# cartlow-python-project-prc

./: .env.example  .env.example2  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: deploy.yml
app/: __init__.py  app.py
app/config/: __init__.py  database.py  my_settings.py
app/controllers/: __init__.py  migrations_controllers.py
app/models/: __init__.py  mysql_models.py
app/routes/: __init__.py  migration_routes.py
app/utils/: __init__.py  database_dependency.py
app/views/: __init__.py
